--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -1,2 +1,4 @@
+<h1>My first web page</h2>
+<h2>Written with the guidance of Epidocus</h2>
 <p>This is my first web page!</p>
 <p>Istn't it nice?</p>
