--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -1,4 +1,12 @@
 <h1>My first web page</h2>
 <h2>Written with the guidance of Epidocus</h2>
 <p>This is my first web page!</p>
-<p>Istn't it nice?</p>
+<p>Isn't it nice?</p>
+
+<p>Here are some things I'm going to learn about coding:</p>
+<ul>
+  <li>HTML</li>
+  <li>CSS</li>
+  <li>JavaScript</li>
+  <li>And a lot more!</li>
+</ul>
