added links and images to website

--- a/favorite-things.html
+++ b/favorite-things.html
@@ -7,7 +7,7 @@
     <h1>Our Favorite Things</h1>
     <h2>Indoor Things</h2>
     <ul>
-      <li>Sleeping</li>
+      <li><strong>Sleeping</strong></li>
       <li>Movies</li>
       <li>Cooking</li>
       <li>Reading</li>
@@ -20,5 +20,6 @@
       <li>Climbing</li>
       <li>Rowing</li>
     </ul>
+    <img src="hiker.jpg" alt="This guy is a hiker">
   </body>
 </html>
