--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -14,8 +14,10 @@
     <ul>
       <li>HTML</li>
       <li>CSS</li>
-      <li>JavaScript</li>
+      <li><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference">JavaScript</a></li>
       <li>And a lot more!</li>
     </ul>
+
+    <p>Here is a link to our <a href="favorite-things.html">favorite things</a>.</p>
   </body>
 </html>
