added great pictures

--- a/favorite-things.html
+++ b/favorite-things.html
@@ -5,21 +5,22 @@
   </head>
   <body>
     <h1>Our Favorite Things</h1>
-    <h2>Indoor Things</h2>
+    <h2><em>Indoor</em> Things</h2>
     <ul>
       <li><strong>Sleeping</strong></li>
       <li>Movies</li>
       <li>Cooking</li>
       <li>Reading</li>
     </ul>
+    <img src="img/reading.jpg" alt="Shaq O'Neal reading.">
 
-    <h2>Outdoor Things</h2>
+    <h2><em>Outdoor</em> Things</h2>
     <ul>
       <li>Running</li>
       <li>Hiking</li>
       <li>Climbing</li>
       <li>Rowing</li>
     </ul>
-    <img src="hiker.jpg" alt="This guy is a hiker">
+    <img src="img/hiker.jpg" alt="This guy is a hiker">
   </body>
 </html>
