--- a/favorite-things.html
+++ b/favorite-things.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link href="css/style.css" rel="stylesheet" type="text/css">
     <title>Our Favorite Things</title>
   </head>
   <body>
